assets/src/style/global.scss
/* ... */
.header {
    width: 100%;
    height: 3rem;
    padding: 0 1rem;
    background-color: $dark-blue;
    //opacity: 0.5;
    color: $gold;
    /*position: absolute;
    top: 0;
    left: 0;
    right: 0;*/
    @extend %float-vertical;
}
.home .header {
    position: absolute;
    right: 0;
    left: 0;
    bottom: 0;
    top: calc(100vh - 3rem);
}
#site-header.stuck {
  position:fixed;
  top:0;
  left: 0;
  z-index: 9999;
}
#header-logo-img {
    height: 2rem;
    width: auto;
    display: block;
    float: left;
    margin-top: 0.5rem;
}
.logo-c {
    fill: $gold;
    &:hover {
        fill: #fff;
    }
}

/* ==========================================================================
   #MENU
========================================================================== */
nav {
    float: right;
    position: relative;
}
.menu {
    @include until($M) {
        display: none; 
        opacity: 0; 
    }
    @include at-least($M) {
        display: block;
        opacity: 1;
    } 
}
.menu li {
    display: inline-block;
    letter-spacing: 0.1em;
    text-transform: uppercase;
    font-size: 0.75rem;
    margin-right: 0.375rem;
    @include at-least($M) {
        padding-top: 1rem;
        margin-right: 0.5rem;
    }
    @include at-least($L) {
        margin-right: 0.75rem;
    }
    @include at-least($XL) {
        margin-right: 1rem;
    }
    &:last-child {
        margin-right: 0;
    }
    &:nth-last-child(3):after {
        @include until($M) {
            content: '';
            color: $alt-color;
            //margin-left: 0.375rem;
            width: 100%;
            height: 1px;
            border-top: 1px solid $alt-color;
            display: block;
            text-align: center;
        }
        @include at-least($M) {
            //margin-left: 0.5rem;
        }
        @include at-least($M) {
            font-weight: 300;
            content: '|';
            color: #fff;
            margin-left: 0.75rem;
        }
        @include at-least($XL) {
            margin-left: 1rem;
        }
    }
    a {
        font-weight: 500;
        color: $gold;
        padding: 0.5rem 0;
        &:hover {
            color: $light-blue;
        }
    }
    .active {
        color: #fff;
        &:hover {
            color: $light-blue;
        }
    }
}
#language-active {
    display: none;
}
.toggle { 
    font-family: $sans-font-family;
    display: block;
    position: relative;
    cursor: pointer;
    -webkit-touch-callout: none;
    -webkit-user-select: none;
    user-select: none;
    margin-bottom: 0;
    @include until($M) {
        font-size: 20px;
    }
    @include at-least($M) {
        display: none;
    }
    width: 120px;
    text-align: center;
    float: right;
}
#toggle:checked ~ .menu { 
    display: block; 
    opacity: 1;
    font-size: 20px;
    background-color: $base-background-color;
    
    border-bottom: 1px solid #999;
    border-top-left-radius: $base-border-radius;
    border-top-right-radius: $base-border-radius;
    position: absolute;
    top: calc(-15rem + 1px);
    right: 0;
    height: 15rem;
    z-index: 9999;
    @extend %float-vertical-upsidedown;
    .parent {
        display: block;
        width: 120px;
        margin-right: 0;
        overflow: hidden;
    }
    #language-active {
        display: none;
    }
    .menu-link {
        font-size: 16px;
        display: block;
        width: 100%;
        height: 2.5em;
        padding: 0.5em;
        &:hover, &:focus {
            background-color: $gold;
            color: #fff;
        }
        &.active {
            color: $dark-blue;
            &:hover, &:focus {
                color: #fff;
            }
        }
    }
}
.stuck #toggle:checked ~ .menu {
    top: 3rem;
    border-top-left-radius: 0;
    border-top-right-radius: 0;
    border-bottom-left-radius: $base-border-radius;
    border-bottom-right-radius: $base-border-radius;
    @extend %float-vertical;
}
/* responsive menu toggle child items*/
#toggle:checked ~ .menu li.child .menu-link { 
    padding-left: 1em;
}
#toggle {
    display: none;
}
.toggle:after {
    content: 'menu';
    display: block;
    padding: 0.5rem;
    height: 3rem;
    background: $gold;
    color: #fff;
    width: 120px;
    position: relative;
    //right: 12px;
    @include transition(all 0.3s ease-in-out);
    //border-radius: $base-border-radius;
    //@extend %float-vertical;
}
.toggle:hover:after, .toggle:focus:after{
    background: $gold;
}
#toggle:checked + .toggle:after{
    content: 'close';
    border-bottom-left-radius: 0;
    border-bottom-right-radius: 0;
    }
#toggle:checked {
    //border-radius: 3px 3px 0 0;
}

/* ==========================================================================
   #MAIN
========================================================================== */
.home {
    //position: absolute;
    //top: 100vh;
    padding-top: 100vh;
    //background-color: #fff;
    main {
        min-height: 100vh;
    }
}
main {
    background-color: $base-background-color;
    //background-image: url('/assets/build/img/bg.jpg');
   // background-attachment: fixed;
    //background-size: contain;
    //background-position: top center;
    //background-repeat: no-repeat;
    article {
        //@extend .container;
    }
}
.right {
    //margin: 0 1em 1em 1em;
    @include at-least($M) {
        float: right;
        margin: 3rem 0 3rem 1rem;
        width: 50%;
    }
    @include at-least($L) {
        width: 50%;
    }
    @include at-least($XL) {
        width: 50%;
    }
}
.left {
    //margin: 0 1em 1em 1em;
    @include at-least($M) {
        float: left;
        margin: 3rem 1rem 3rem 0;
        width: 50%;
    }
    @include at-least($L) {
        width: 33%;
        //margin-left: -10%;
    }
    @include at-least($XL) {
        width: 50%;
        //margin-left: -15%;
    }
}
.big {
    @extend .container;
    margin-bottom: 3rem;
    clear: both;
}
/* ... */

